--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   login_sdk:
-    path: "../login_sdk"
-  xy_download:
-    path: "../xy_download"
+    path: "../flutter_login_sdk"
   chat_message:
-    path: "../chat_message"
+    path: "../flutter_chat_message"
   openai_flutter:
-    path: "../openai_flutter"
+    path: "../flutter_openai"
   sqflite: ^2.4.0
   get: ^4.6.6
   dio: ^5.7.0
@@ -71,9 +69,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
